# IK-RL

./: CONTRIBUTING.md  README.md  pyproject.toml
ik-rl/: __init__.py  environment.py
ik-rl/robots/: robot_arm.py
ik-rl/solver/: base_solver.py
ik-rl/task/: __init__.py  base_task.py  imitation_task.py  reach_goal_task.py
ik-rl/utils/: geometry.py
ik_rl/: environment.py
ik_rl/obstacle/: generator.py
ik_rl/plot/: plot.py
ik_rl/robots/: robot_arm.py
ik_rl/solver/: base_solver.py  ccd.py
ik_rl/task/: __init__.py  base_task.py  imitation_task.py  reach_goal_task.py
ik_rl/utils/: cast.py  geometry.py
ikrlenv/: __init__.py  action_distr.ipynb  forward_distribution.ipynb  plane_robot_env.py
ikrlenv/common/: sample_target.py
ikrlenv/environment/: plane_robot_env.py
ikrlenv/plot/: plot.py
ikrlenv/robots/: ccd.py  ccd_time_complexitiy.ipynb  robot_arm.py
ikrlenv/solver/: base_solver.py  ccd.py
ikrlenv/task/: base_task.py  imitation_learning.py  imitation_task.py  reach_goal.py  reach_goal_task.py
ikrlenv/utils/: geometry.py
studies/: action_distr.ipynb  ccd.ipynb  ccd_time_complexity.ipynb  forward_distribution.ipynb
tests/: test_ccd.py  test_env.py  test_robot_arm.py  test_tasks.py
